infrastructure/environments/dev/main.tf
resource "aws_vpc" "main" {
cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public_1" {
vpc_id                  = aws_vpc.main.id
cidr_block              = "10.0.1.0/24"
availability_zone       = "ap-south-1a"
map_public_ip_on_launch = true
}

resource "aws_subnet" "public_2" {
vpc_id                  = aws_vpc.main.id
cidr_block              = "10.0.2.0/24"
availability_zone       = "ap-south-1b"
map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "gw" {
vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "rt" {
vpc_id = aws_vpc.main.id
}

resource "aws_route" "internet" {
route_table_id         = aws_route_table.rt.id
destination_cidr_block = "0.0.0.0/0"
gateway_id             = aws_internet_gateway.gw.id
}

resource "aws_route_table_association" "a1" {
subnet_id      = aws_subnet.public_1.id
route_table_id = aws_route_table.rt.id
}

resource "aws_route_table_association" "a2" {
subnet_id      = aws_subnet.public_2.id
route_table_id = aws_route_table.rt.id
}

resource "aws_security_group" "alb_sg" {
vpc_id = aws_vpc.main.id

ingress {
from_port   = 80
to_port     = 80
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
}

resource "aws_security_group" "ec2_sg" {
vpc_id = aws_vpc.main.id

ingress {
from_port       = 8080
to_port         = 8080
protocol        = "tcp"
security_groups = [aws_security_group.alb_sg.id]
}

ingress {
from_port   = 22
to_port     = 22
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
}

data "aws_ami" "amazon_linux" {
most_recent = true

owners = ["amazon"]

filter {
name   = "name"
values = ["amzn2-ami-hvm-*"]
}
}

resource "aws_instance" "petclinic" {
ami                    = data.aws_ami.amazon_linux.id
instance_type          = var.instance_type
subnet_id              = aws_subnet.public_1.id
vpc_security_group_ids = [aws_security_group.ec2_sg.id]


user_data = file("${path.module}/userdata.sh")

tags = {
Name = "petclinic-server"
}
}

resource "aws_lb" "alb" {
name               = "petclinic-alb"
internal           = false
load_balancer_type = "application"

security_groups = [aws_security_group.alb_sg.id]

subnets = [
aws_subnet.public_1.id,
aws_subnet.public_2.id
]
}

resource "aws_lb_target_group" "tg" {
name     = "petclinic-tg"
port     = 8080
protocol = "HTTP"
vpc_id   = aws_vpc.main.id

health_check {
path                = "/"
protocol            = "HTTP"
matcher             = "200"
interval            = 30
timeout             = 5
healthy_threshold   = 3
unhealthy_threshold = 3
}
}

resource "aws_lb_target_group_attachment" "attach" {
target_group_arn = aws_lb_target_group.tg.arn
target_id        = aws_instance.petclinic.id
port             = 8080
}

resource "aws_lb_listener" "listener" {
load_balancer_arn = aws_lb.alb.arn

port     = 80
protocol = "HTTP"

default_action {
type             = "forward"
target_group_arn = aws_lb_target_group.tg.arn
}
}
